# github-graphql-client

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: 02_preparation.md  03_first_query.md  04_first_client.md  05_async_client.md  06_full_client.md  07_graphql_query.md  08_data_model.md  09_conclusion.md  first_query.md  gql_client.md  index.md  preparation.md  small_settings.md
github_graphql_client/: model.py  runner.py
github_graphql_client/client/: async_client.py  base.py  client.py  gql_client.py  requests_client.py  sync_client.py
github_graphql_client/queries/: marketplaceCategories.py  repository.py
github_graphql_client/transport/: aiohttp.py  base.py  requests.py
scripts/: run.py
tests/: test_queries_validation.py
